LEARN: Compartilhando dados do componente pai para o componente filho

--- a/01 - Introdução/primeiro-projeto/src/app/app.component.html
+++ b/01 - Introdução/primeiro-projeto/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>Olá, Mundo!</h1>
 <app-primeiro-componente></app-primeiro-componente>
+<app-parent-data [nome] = "nome" [dadosUsuario] = "dados"></app-parent-data>
 <router-outlet></router-outlet>
